Create NavMenu html and styling

--- a/client/src/components/AnimatedLink/AnimatedLink.module.scss
+++ b/client/src/components/AnimatedLink/AnimatedLink.module.scss
@@ -1,6 +1,7 @@
 @import "/src/styles/base";
 
 .link {
+  display: inline-block;
   position: relative;
   color: $color-text;
   padding-bottom: $spacing-1;
