--- a/client/src/layout/NavigationMenu/NavMenu.module.scss
+++ b/client/src/layout/NavigationMenu/NavMenu.module.scss
@@ -37,18 +37,19 @@
 
 .navDropdown {
   position: absolute;
-  top: 105%;
+  top: calc(100% + $spacing-6);
   overflow: hidden;
   padding: $spacing-5 $spacing-16 $spacing-5 $spacing-8;
-  background-color: $color-surface;
+  background-color: #fff;
   transform-origin: top;
+  z-index: 100;
 
   &[data-state="open"] {
-    animation: scaleIn .25s ease-in-out;
+    animation: scaleIn .35s ease-out;
   }
 
   &[data-state="closed"] {
-    animation: scaleOut .25 ease-in-out;
+    animation: scaleOut .3s ease-in-out;
   }
 
   ul > li {
@@ -59,21 +60,21 @@
 @keyframes scaleIn {
   from {
     opacity: 0;
-    transform: rotateX(-30deg) scale(0.9);
+    transform: rotateX(-30deg) scaleY(0.5);
   }
   to {
     opacity: 1;
-    transform: rotateX(0deg) scale(1);
+    transform: rotateX(0deg) scaleY(1);
   }
 }
 
 @keyframes scaleOut {
   from {
     opacity: 1;
-    transform: rotateX(0deg) scale(1);
+    transform: rotateX(0deg) scaleY(1);
   }
   to {
     opacity: 0;
-    transform: rotateX(-10deg) scale(0.95);
+    transform: rotateX(-10deg) scaleY(0.95);
   }
 }
