--- a/client/src/styles/base.scss
+++ b/client/src/styles/base.scss
@@ -21,7 +21,7 @@ $screen-lg: 1024px;
 /* Theme colors */
 $color-primary: hsl(11deg 40% 59%);
 $color-primary-light: hsl(17deg 35% 68%);
-$color-primary-dark: hsl(15deg 28% 42%);
+$color-primary-dark: hsl(15, 93%, 32%);
 
 $color-text: hsl(0, 20%, 12%);
 $color-text-light: $color-primary-light;
