--- a/client/src/styles/base.scss
+++ b/client/src/styles/base.scss
@@ -6,6 +6,7 @@
 @import "./preflight.scss";
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
 
 /********************************
  Responsive media query variables
@@ -353,6 +354,7 @@ $spacing-96: 24rem;
 /* Fonts */
 $font-serif: "Lora", serif;
 $font-sans: "Lato", sans-serif;
+$font-cursive: "Great Vibes", cursive;
 
 $font-xs: 0.75rem;
 $font-sm: 0.875rem;
