--- a/client/src/pages/HomePage/Testimonial/TestimonialSection.module.scss
+++ b/client/src/pages/HomePage/Testimonial/TestimonialSection.module.scss
@@ -3,7 +3,7 @@
 .testimonialSection {
   padding: $spacing-48 0;
   background-color: $color-surface-secondary;
-  clip-path: polygon(0 0, 45% 0, 50% 5%, 55% 0, 100% 0, 100% 100%, 0 100%);
+  clip-path: polygon(0 0, 45% 0, 50% 50px, 55% 0, 100% 0, 100% 100%, 0 100%);
 }
 
 .testimonialGrid {
