--- a/client/src/pages/HomePage/HomePage.module.scss
+++ b/client/src/pages/HomePage/HomePage.module.scss
@@ -5,10 +5,35 @@
 }
 
 .homeImg {
+  position: relative;
   background-image: url("https://res.cloudinary.com/dnxdsagpg/image/upload/v1719422030/hotel-site/hotel-main.jpg");
   min-height: 600px;
   background-position: top;
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.homeImgOverlay {
+  position: absolute;
+  top: 50%;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.75), transparent);
+  z-index: 100;
+  text-align: center;
+
+  & > .overlayText {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    font-family: $font-serif;
+    color: #fff;
+    font-size: $font-6xl;
+    padding: $spacing-12 0;
+    text-transform: uppercase;
+    text-shadow: 1px 1px 5px #000;
+  }
 }
