--- a/client/src/layout/NavigationMenu/NavMenu.module.scss
+++ b/client/src/layout/NavigationMenu/NavMenu.module.scss
@@ -1,9 +1,14 @@
 @import "/src/styles/base";
 
+// Desktop Styles //
 .navRoot {
   position: relative;
   background-color: $color-surface;
   padding: $spacing-6 0;
+
+  @media (max-width: $screen-lg){
+    display: none;
+  }
 }
 
 .navList {
@@ -54,6 +59,108 @@
 
   ul > li {
     padding: $spacing-3 0;
+  }
+}
+
+// Mobile Styles //
+.mobileNavMenu {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: $spacing-3 $spacing-6;
+  background-color: $color-surface;
+
+  @media (min-width: $screen-lg) {
+    display: none;
+  }
+}
+
+.menuIcon {
+  fill: $color-primary;
+  stroke-width: 1px;
+  height: 1.5rem;
+  width: 1.5rem;
+}
+
+.mobileNavDropdown {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  left: 0;
+  background-color: #fff;
+  z-index: 1000;
+  transform-origin: top;
+  transform: scaleY(0);
+  transition: all 0.3s ease-in-out;
+
+  &.open {
+    transform: scaleY(1);
+    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+  }
+
+  &.closed {
+    transform: scaleY(0);
+  }
+}
+
+.mobileList {
+  padding: $spacing-6 $spacing-12;
+}
+
+.mobileListItem {
+  position: relative;
+  padding: $spacing-1 0;
+  font-size: $font-sm;
+  cursor: pointer;
+
+  & svg {
+    width: 1rem;
+    height: 1rem;
+  }
+}
+
+.mobileListNavItemHeading {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.mobileNavItemHeader {
+  display: flex;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+.chevron {
+  transition: all 0.3s ease-out;
+}
+
+.chevronOpen {
+  transform: rotate(90deg);
+}
+
+.mobileNavSubList {
+  background-color: #fff;
+  z-index: 1001;
+  transform-origin: top;
+  transition: max-height 0.3s ease-out, transform 0.25s ease-out;
+  max-height: 0;
+  transform: scaleY(0);
+
+  &.open {
+    max-height: 200px;
+    transform: scaleY(1);
+  }
+
+  & > li {
+    margin-top: $spacing-1;
+    margin-left: $spacing-2;
+
+    &:last-child {
+      margin-bottom: $spacing-3;
+    }
   }
 }
 
