--- a/client/src/pages/HomePage/Reservation/ReservationSection.module.scss
+++ b/client/src/pages/HomePage/Reservation/ReservationSection.module.scss
@@ -29,10 +29,18 @@
     font-size: $font-7xl;
     text-transform: uppercase;
     letter-spacing: 2px;
+
+    @media (max-width: $screen-lg) {
+      font-size: $font-6xl;
+    }
   }
 
   & > p {
     margin-top: $spacing-3;
+
+    @media (max-width: $screen-lg) {
+      font-size: $font-sm;
+    }
   }
 }
 
@@ -42,6 +50,18 @@
   align-items: center;
   gap: $spacing-8;
   margin-top: $spacing-12;
+
+  @media (max-width: $screen-lg) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 0 $spacing-4;
+  }
+
+  @media (max-width: $screen-sm) {
+    display: grid;
+    grid-template-columns: 1fr;
+    padding: 0 $spacing-2;
+  }
 
   & > .formItem {
     display: flex;
@@ -65,6 +85,10 @@
   border-bottom: 1px solid $color-text;
   color: $color-gray-500;
   text-wrap: nowrap;
+
+  @media (max-width: $screen-lg) {
+    gap: $spacing-12;
+  }
 
   &:focus {
     outline: 2px solid $color-primary;
@@ -128,14 +152,18 @@
 }
 
 .submitBtn {
-  min-width: 140px;
-  min-height: 140px;
+  width: 140px;
+  height: 140px;
   border-radius: $border-rounded-full;
   letter-spacing: 1px;
   text-transform: uppercase;
   color: #fff;
   background-color: $color-primary-light;
   transition: all 0.1s ease-in-out;
+
+  @media (max-width: $screen-lg) {
+    margin: 0 auto;
+  }
 
   &:hover {
     background-color: $color-primary;
