--- a/client/src/pages/HomePage/Contact/ContactSection.module.scss
+++ b/client/src/pages/HomePage/Contact/ContactSection.module.scss
@@ -20,11 +20,19 @@
   & > h3 {
     font-size: $font-4xl;
     font-family: $font-serif;
+
+    @media (max-width: $screen-lg) {
+      font-size: $font-3xl;
+    }
   }
 
   & > p {
     margin-top: $spacing-4;
     font-size: $font-lg;
+
+    @media (max-width: $screen-lg) {
+      font-size: $font-base;
+    }
   }
 }
 
@@ -33,6 +41,17 @@
   justify-content: center;
   align-items: center;
   gap: $spacing-36;
+  
+  @media (max-width: $screen-lg) {
+    flex-direction: column;
+    gap: $spacing-8;
+  }
+}
+
+.contactItem {
+  @media (max-width: $screen-lg) {
+    text-align: center;
+  }
 }
 
 .contactItemHeader {
