Small tweaks to Home page responsiveness

--- a/client/src/pages/HomePage/Contact/ContactSection.module.scss
+++ b/client/src/pages/HomePage/Contact/ContactSection.module.scss
@@ -2,7 +2,7 @@
 
 .contactSection {
   background-color: $color-surface-secondary;
-  padding: $spacing-24;
+  padding: $spacing-24 $spacing-4;
 
 }
 
