--- a/client/src/pages/Events/EventsPage.module.scss
+++ b/client/src/pages/Events/EventsPage.module.scss
@@ -1,7 +1,7 @@
 @import "/src/styles/base";
 
 .eventsPage {
-  padding: $spacing-24 $spacing-4;
+  padding: $spacing-24 $spacing-4 0 $spacing-4;
   text-align: center;
 }
 
@@ -72,4 +72,8 @@
       font-size: $font-sm;
     }
   }
+}
+
+.newsletter {
+  margin-top: $spacing-36;
 }
