--- a/client/src/pages/Rooms/RoomPage.module.scss
+++ b/client/src/pages/Rooms/RoomPage.module.scss
@@ -13,7 +13,7 @@
 .roomPageGrid {
   margin-top: $spacing-16;
   display: grid;
-  grid-template-columns: 3fr 1fr;
+  grid-template-columns: 2fr 1fr;
   column-gap: $spacing-8;
 }
 
@@ -23,16 +23,62 @@
   gap: $spacing-24;
 }
 
-.filterForm {
-  & > .formItem {
-    display: flex;
-    flex-direction: column;
-    gap: $spacing-1;
+.emptyRoomList {
+  max-width: 50ch;
 
-    & > label {
-      font-size: $font-xs;
-      text-transform: uppercase;
-      letter-spacing: 1px;
+  & > h2 {
+    font-family: $font-serif;
+    font-size: $font-3xl;
+  }
+
+  & > p {
+    margin-top: $spacing-2;
+    line-height: 1.75;
+  }
+}
+
+.filterList {
+  position: sticky;
+  right: 0;
+  top: 20%;
+  padding: $spacing-8;
+  height: min-content;
+  border: 1px solid #ccc;
+
+  & > h2 {
+    text-align: center;
+    font-family: $font-serif;
+    font-size: $font-2xl;
+  }
+}
+
+.filterForm {
+  margin-top: $spacing-12;
+  display: flex;
+  flex-direction: column-reverse;
+  gap: $spacing-6;
+}
+
+.filterFormTextInputGroup {
+  & > label {
+    display: block;
+    font-size: $font-xs;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+  }
+
+  & > input[type="text"] {
+    display: block;
+    width: 100%;
+    margin-top: $spacing-2;
+    padding: $spacing-3 0;
+    background-color: transparent;
+    border-bottom: 1px solid #000;
+
+    &:focus {
+      outline: 2px solid $color-primary;
+      outline-offset: 1px;
+      border-color: transparent;
     }
   }
 }
