--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -7,6 +7,11 @@ body {
   background-color: $color-surface;
 }
 
+::selection {
+  color: #fff;
+  background-color: $color-primary-dark;
+}
+
 .rdp {
   --rdp-accent-color: hsl(15, 93%, 32%);
   --rdp-background-color: hsl(17deg 35% 90%);
