Update base font color and ensure that it is used throughout the app

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -9,6 +9,7 @@ body {
   font-family: $font-sans;
   line-height: 1.75;
   background-color: $color-surface;
+  color: $color-text;
 }
 
 ::selection {
