Change NavMenu headers to serif font

--- a/client/src/layout/NavigationMenu/NavMenu.module.scss
+++ b/client/src/layout/NavigationMenu/NavMenu.module.scss
@@ -21,6 +21,8 @@
 .navItemHead {
   text-transform: uppercase;
   letter-spacing: 1px;
+  font-family: $font-serif;
+  font-size: $font-lg;
 }
 
 .navLogo {
