--- a/client/src/pages/Rooms/Room/RoomComponent.module.scss
+++ b/client/src/pages/Rooms/Room/RoomComponent.module.scss
@@ -19,6 +19,10 @@
 
 .roomBody {
   padding: $spacing-9;
+
+  @media (max-width: $screen-sm) {
+    text-align: center;
+  }
 }
 
 .roomHeader {
@@ -29,6 +33,10 @@
   & > h3 {
     font-family: $font-serif;
     font-size: $font-3xl;
+
+    @media (max-width: $screen-lg) {
+      font-size: $font-2xl;
+    }
 
     &:hover {
       text-decoration: underline 2px;
@@ -43,6 +51,11 @@
       display: inline-block;
       margin-left: $spacing-2;
       font-size: $font-3xl;
+
+      @media (max-width: $screen-lg) {
+        font-size: $font-2xl;
+        margin-left: $spacing-1;
+      }
     }
   }
 }
@@ -52,6 +65,15 @@
   display: flex;
   justify-content: flex-start;
   gap: $spacing-4;
+  flex-wrap: wrap;
+
+  @media (max-width: $screen-lg) {
+    font-size: $font-sm;
+  }
+
+  @media (max-width: $screen-sm) {
+    justify-content: center;
+  }
 
   & > .roomDetailDivider {
     width: 1px;
