--- a/client/src/pages/Rooms/RoomsPage.module.scss
+++ b/client/src/pages/Rooms/RoomsPage.module.scss
@@ -2,11 +2,19 @@
 
 .roomPage {
   padding: $spacing-16 $spacing-4;
+  
+  @media (max-width: $screen-lg) {
+    padding: $spacing-9 $spacing-4;
+  }
 
   & h1 {
     text-transform: uppercase;
     font-family: $font-serif;
     font-size: $font-5xl;
+
+    @media (max-width: $screen-lg) {
+      font-size: $font-3xl;
+    }
   }
 }
 
@@ -15,6 +23,12 @@
   display: grid;
   grid-template-columns: 2fr 1fr;
   column-gap: $spacing-8;
+
+  @media (max-width: $screen-lg) {
+    margin-top: $spacing-9;
+    display: flex;
+    flex-direction: column-reverse;
+  }
 }
 
 .roomList {
@@ -25,6 +39,11 @@
 
 .emptyRoomList {
   max-width: 50ch;
+
+  @media (max-width: $screen-lg) {
+    margin: $spacing-12 auto 0 auto;
+    text-align: center;
+  }
 
   & > h2 {
     font-family: $font-serif;
@@ -44,6 +63,10 @@
   padding: $spacing-8;
   height: min-content;
   border: 1px solid #ccc;
+
+  @media (max-width: $screen-lg) {
+    position: revert;
+  }
 
   & > h2 {
     text-align: center;
