--- a/client/src/pages/Room/RoomPage.module.scss
+++ b/client/src/pages/Room/RoomPage.module.scss
@@ -1,9 +1,5 @@
 @import "src/styles/base";
 
-.roomPage {
-
-}
-
 .roomImgBanner {
   position: relative;
   border-bottom: 1px solid $color-surface-secondary;
@@ -26,6 +22,11 @@
   border: 1px solid $color-surface-secondary;
   border-bottom: none;
 
+  @media (max-width: $screen-md) {
+    max-width: 400px;
+    padding: $spacing-4;
+  }
+
   & > .price {
     display: flex;
     justify-content: center;
@@ -36,9 +37,17 @@
     text-transform: uppercase;
     letter-spacing: 1px;
 
+    @media (max-width: $screen-md) {
+      font-size: $font-xs;
+    }
+
     & > .priceValue {
       color: $color-text-light;
       font-size: $font-5xl;
+      
+      @media (max-width: $screen-md) {
+        font-size: $font-3xl;
+      }
     }
   }
 
@@ -68,6 +77,10 @@
   align-items: flex-start;
   gap: $spacing-3;
 
+  @media (max-width: 400px) {
+    display: none;
+  }
+
   & > .bannerFeature {
     display: flex;
     align-items: center;
@@ -79,12 +92,21 @@
       stroke: #000;
       fill: transparent;
       color: transparent;
+
+      @media (max-width: $screen-md) {
+        width: 20px;
+        height: 20px;
+      }
     }
 
     & > p {
       font-size: $font-sm;
       text-transform: uppercase;
       letter-spacing: 1px;
+
+      @media (max-width: $screen-md) {
+        font-size: $font-xs;
+      }
     }
   }
 }
@@ -94,12 +116,26 @@
   display: grid;
   grid-template-columns: 2fr 1fr;
   column-gap: $spacing-9;
+
+  @media (max-width: $screen-lg) {
+    display: flex;
+    flex-direction: column;
+    gap: $spacing-9;
+  }
 }
 
 .roomMainDescription {
+  @media (max-width: $screen-md) {
+    text-align: center;
+  }
+
   & > h1 {
     font-family: $font-serif;
     font-size: $font-5xl;
+
+    @media (max-width: $screen-md) {
+      font-size: $font-3xl;
+    }
   }
 
   & > .roomDescription {
@@ -114,6 +150,12 @@
     row-gap: $spacing-4;
     column-gap: $spacing-4;
     align-items: stretch;
+    
+    @media (max-width: $screen-sm) {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
 
     & > .galleryImg {
       display: block;
@@ -142,6 +184,12 @@
   border-top: 1px solid #000;
   border-bottom: 1px solid #000;
 
+  @media (max-width: $screen-sm) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
   & > h3 {
     font-family: $font-serif;
     font-size: $font-3xl;
@@ -158,6 +206,11 @@
   grid-template-columns: 1fr 1fr;
   row-gap: $spacing-4;
   justify-content: space-between;
+
+  @media (max-width: $screen-sm) {
+    display: flex;
+    flex-direction: column;
+  }
 
   & > .feature {
     display: flex;
@@ -176,6 +229,10 @@
 
 .relatedContainer {
   padding: $spacing-16 $spacing-4;
+  
+  @media (max-width: $screen-md) {
+    text-align: center;
+  }
 
   & > h3 {
     font-family: $font-serif;
@@ -188,6 +245,13 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: $spacing-5;
+  row-gap: $spacing-5;
+
+  @media (max-width: $screen-md) {
+    display: flex;
+    flex-direction: column;
+    gap: $spacing-12;
+  }
 }
 
 .relatedRoom {
@@ -222,6 +286,17 @@
   }
 }
 
+.relatedDetails {
+  display: flex;
+  flex-direction: column;
+  
+  @media (max-width: $screen-md) {
+    flex-direction: column-reverse;
+    align-items: center;
+    margin-top: $spacing-2;
+  }
+}
+
 .relatedFeatures {
   padding: $spacing-2 0;
   display: flex;
@@ -253,4 +328,8 @@
 .relatedRoomName {
   font-family: $font-serif;
   font-size: $font-xl;
+
+  @media (max-width: $screen-md) {
+    font-size: $font-2xl;
+  }
 }
