--- a/client/src/layout/NavigationMenu/NavMenu.module.scss
+++ b/client/src/layout/NavigationMenu/NavMenu.module.scss
@@ -205,6 +205,14 @@
     margin-top: $spacing-1;
     margin-left: $spacing-2;
 
+    & > .fontLg {
+      font-size: $font-base;
+    }
+
+    &:first-child {
+      padding-top: $spacing-2;
+    }
+
     &:last-child {
       margin-bottom: $spacing-3;
     }
