--- a/client/src/pages/Rooms/RoomsPage.module.scss
+++ b/client/src/pages/Rooms/RoomsPage.module.scss
@@ -232,3 +232,10 @@
     outline: 2px solid #000;
   }
 }
+
+.skeletonContainer {
+  & > .skeletonDetailsContainer {
+    margin-top: $spacing-4;
+  }
+}
+
